<!--
  ~ Copyright (c) 2015 Justin White <jw@justinwhite.net>
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice,
  ~ this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation
  ~ and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its
  ~ contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
  ~ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
  ~ SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
  ~ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
  ~ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  ~ ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  ~ POSSIBILITY OF SUCH DAMAGE.
  ~
  -->

<resources>
    <string name="pref_current_num_players">CURRENT_NUM_PLAYERS</string>

    <string name="default_num_players">4</string>
    <string name="max_num_players">8</string>
    <string name="min_num_players">2</string>

    <string name="Start_Game">Start Game</string>
    <string name="How_many_players_question">How many players?</string>
    <string name="ScoreIt">ScoreIt</string>
    <string name="End_Game">End Game</string>
    <string name="End_the_game_question">End the game?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Phase_10">Phase 10</string>
    <string name="Change">Change</string>
    <string name="Cancel">Cancel</string>
    <string name="Change_Player_Name">Change Player Name</string>
    <string name="Player_Name">Player Name</string>
    <string name="Score">Score</string>
    <string name="Phase">Phase</string>
    <string name="Score_colon">Score:</string>
    <string name="Phase_colon">Phase:</string>
    <string name="Got_next_phase_question">Got next phase?</string>
    <string name="Score_this_hand_colon">Score this hand:</string>
    <string name="Update_Score_colon">"Update Score: "</string>
    <string name="zero">0</string>
    <string name="Phases_colon">Phases:</string>
    <string name="GameName">GameName</string>
    <string name="Name_this_game_question">Name this game?</string>
    <string name="Which_Game_question">Which Game?</string>
    <string name="Select_Game">Select Game</string>
    <string name="Rummy">Rummy</string>
    <string name="Uno">Uno</string>
    <string name="Go_Back">Go Back</string>
    <string name="Select_Game_Type">Select Game Type</string>
    <string name="Score_Phase_10">Score Phase 10</string>
    <string name="Start_Phase_10">Start Phase 10</string>

    <string-array name="phase_selections">
        <item>All</item>
        <item>Odd</item>
        <item>Even</item>
        <item>First 5</item>
        <item>Last 5</item>
        <item>Custom</item>
    </string-array>
</resources>
