<!--
  ~ Copyright (c) 2015 Justin White <jw@justinwhite.net>
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice,
  ~ this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation
  ~ and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its
  ~ contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
  ~ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
  ~ SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
  ~ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
  ~ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  ~ ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  ~ POSSIBILITY OF SUCH DAMAGE.
  ~
  -->

<RelativeLayout
    android:id="@+id/layoutCreateGame"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alignmentMode="alignBounds"
    android:orientation="vertical"
    tools:context=".CreateGameActivity"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/labelPhase10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Phase_10"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/labelHowManyPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelPhase10"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/How_many_players_question"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/labelMinPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical"
        android:text="@string/min_num_players"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignTop="@+id/seekNumPlayers"
        android:layout_alignBottom="@+id/seekNumPlayers"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:id="@+id/labelMaxPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="24dp"
        android:text="@string/max_num_players"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/seekNumPlayers"
        android:layout_alignTop="@+id/seekNumPlayers"
        android:layout_marginTop="4dp"
        />

    <SeekBar
        android:id="@+id/seekNumPlayers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:max="6"
        android:progress="3"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/labelMinPlayers"
        android:layout_below="@+id/labelHowManyPlayers"
        android:layout_marginTop="24dp"
        android:layout_toStartOf="@id/labelMaxPlayers"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        />

    <TextView
        android:id="@+id/textNumPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekNumPlayers"
        android:layout_centerHorizontal="true"
        android:layout_gravity="fill_vertical|center_horizontal"
        android:layout_weight="1"
        android:text="@string/default_num_players"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/Start_Game"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp"
        />
</RelativeLayout>
