<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 Justin White <jw@justinwhite.net>
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice,
  ~ this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation
  ~ and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its
  ~ contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
  ~ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
  ~ SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
  ~ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
  ~ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  ~ ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  ~ POSSIBILITY OF SUCH DAMAGE.
  ~
  -->

<android.support.v7.widget.CardView
    android:id="@+id/phase10_player_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:elevation="8sp"
    android:padding="8dp"
    card_view:cardCornerRadius="4sp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    tools:context=".GameActivity"
    tools:ignore="UnusedAttribute"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/textPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/Player_Name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/cardview_dark_background"
            />

        <TextView
            android:id="@+id/labelPlayerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/labelPlayerPhase"
            android:layout_alignEnd="@+id/labelPlayerPhase"
            android:layout_alignRight="@+id/labelPlayerPhase"
            android:text="@string/Score_colon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/cardview_dark_background"
            />

        <TextView
            android:id="@+id/textPlayerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/labelPlayerScore"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/labelPlayerScore"
            android:text="@string/Score"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/cardview_dark_background"
            />

        <TextView
            android:id="@+id/labelPlayerPhase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textPlayerName"
            android:layout_toEndOf="@+id/textPlayerName"
            android:text="@string/Phase_colon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/cardview_dark_background"
            />

        <TextView
            android:id="@+id/textPlayerPhase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/labelPlayerPhase"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/labelPlayerPhase"
            android:text="@string/Phase"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/cardview_dark_background"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>
