<!--
  ~ Copyright (c) 2015 Justin White <jw@justinwhite.net>
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice,
  ~ this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation
  ~ and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its
  ~ contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
  ~ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
  ~ SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
  ~ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
  ~ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  ~ ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  ~ POSSIBILITY OF SUCH DAMAGE.
  ~
  -->

<ScrollView
    android:id="@+id/scrollView"
    style="@android:style/Widget.Material.ScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    tools:context=".MainActivity"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rootLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        tools:context=".CreateGameActivity"
        >

        <TextView
            android:id="@+id/labelHowManyPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/How_many_players_question"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/labelMinPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_horizontal"
            android:text="@string/min_num_players"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintEnd_toStartOf="@+id/seekNumPlayers"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelHowManyPlayers"
            />

        <SeekBar
            android:id="@+id/seekNumPlayers"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="6"
            android:progress="3"
            app:layout_constraintBottom_toBottomOf="@+id/labelMinPlayers"
            app:layout_constraintHorizontal_weight="10"
            app:layout_constraintLeft_toRightOf="@+id/labelMinPlayers"
            app:layout_constraintRight_toLeftOf="@+id/labelMaxPlayers"
            app:layout_constraintTop_toTopOf="@+id/labelMinPlayers"
            />

        <TextView
            android:id="@+id/labelMaxPlayers"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/max_num_players"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBottom_toBottomOf="@+id/labelMinPlayers"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seekNumPlayers"
            app:layout_constraintTop_toBottomOf="@+id/labelHowManyPlayers"
            />

        <TextView
            android:id="@+id/textNumPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_num_players"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekNumPlayers"
            />

        <CheckBox
            android:id="@+id/checkNameIt"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="false"
            android:text="@string/Name_this_game_question"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNumPlayers"
            />

        <EditText
            android:id="@+id/editGameName"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/GameName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkNameIt"
            tools:ignore="LabelFor"
            />

        <TextView
            android:id="@+id/labelPhases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Phases_colon"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toStartOf="@+id/spinnerPhases"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editGameName"
            />

        <Spinner
            android:id="@+id/spinnerPhases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/labelPhases"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelPhases"
            app:layout_constraintTop_toTopOf="@+id/labelPhases"
            />


        <GridLayout
            android:id="@+id/gridPhases"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:columnCount="@integer/grid_phases_column_count"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPhases"
            >

        </GridLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
